# MinesweeperCStudy

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  saved_game.txt  test.sh
archive/: minesweeper.h
docs/: BuildReadme.md  DeveloperGuide.md  RubricReport.md
include/: board.hpp  minesweeper.hpp  text_board_serializer.hpp  tile.hpp  tile_state.hpp
include/minesweeper/: board.hpp  text_board_serializer.hpp
src/: board.cpp  main.c  main.cpp  minesweeper.c  minesweeper.cpp  minesweeper.h  minesweeper.hpp  text_board_serializer.cpp  tile.cpp  tile_state.cpp
tests/: board_test.cpp  main.cpp  text_board_serializer_test.cpp  tile_state_test.cpp  tile_test.cpp
tui/: app.cpp
